Add FileManager.createOutputDirectoryIfNeeded